--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "-": "^0.0.1",
     "axios": "^1.6.7",
     "cloudinary": "^1.41.3",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-generator": "^4.2.0",
     "express-session": "^1.17.3",
     "g": "^2.0.1",
     "gh": "^2.8.9",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1"
   }
